Bug 828003 - Don't redefine types that're already in stdint.h. r=jrmuizel